:sparkles: support authenticating non-url uris